# previsao-vendas-planejamento-receita

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
assets/: styles.css
docs/: documentacao_tecnica.md  insights_negocio.md
notebooks/: 01_eda_dados_reais.ipynb  02_modelagem_baselines.ipynb  03_avaliacao_metricas.ipynb
reports/: model_comparison.csv  model_comparison.json  model_metrics.json  model_metrics_by_family.csv
scripts/: download_store_sales.py  evaluate_model.py  setup_kaggle_token.ps1
src/revenue_forecast_dashboard/: __init__.py  __main__.py  app.py  data.py  figures.py  model.py
tests/: test_dashboard_data.py  test_forecast_models.py
